crates/rome_js_formatter/tests/specs/prettier/js/module-blocks/comments.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "js\\module-blocks\\comments.js"
---

# Input

```js
const m = /*A1*/ module /*A2*/ { /*A3*/
  /*A4*/
  export const foo = "foo";
  export { foo }; /*A5*/
  /*A6*/
}/*A7*/;/*A8*/

const m2 = module/* B1 */{
  /* B2 */
};
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,12 +1,13 @@
-const m = /*A1*/ module {
-  /*A2*/ /*A3*/
+const m = /*A1*/ module; /*A2*/
+{
+  /*A3*/
   /*A4*/
   export const foo = "foo";
   export { foo }; /*A5*/
   /*A6*/
-}; /*A7*/ /*A8*/
+} /*A7*/ /*A8*/
 
-const m2 = module {
-  /* B1 */
+const m2 = module; /* B1 */
+{
   /* B2 */
-};
+}
```

# Output

```js
const m = /*A1*/ module; /*A2*/
{
  /*A3*/
  /*A4*/
  export const foo = "foo";
  export { foo }; /*A5*/
  /*A6*/
} /*A7*/ /*A8*/

const m2 = module; /* B1 */
{
  /* B2 */
}
```


# Errors
```
comments.js:1:32 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ comments.js:1:32
    │
  1 │ const m = /*A1*/ module /*A2*/ { /*A3*/
    │                                ^
  
  i ...Which is required to end this statement
  
    ┌─ comments.js:1:1
    │
  1 │ const m = /*A1*/ module /*A2*/ { /*A3*/
    │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  
comments.js:3:3 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Illegal use of an export declaration not at the top level
  
  × move this declaration to the top level
  
    ┌─ comments.js:3:3
    │
  3 │   export const foo = "foo";
    │   ^^^^^^^^^^^^^^^^^^^^^^^^^
  
comments.js:4:3 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Illegal use of an export declaration not at the top level
  
  × move this declaration to the top level
  
    ┌─ comments.js:4:3
    │
  4 │   export { foo }; /*A5*/
    │   ^^^^^^^^^^^^^^^
  
comments.js:8:26 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ comments.js:8:26
    │
  8 │ const m2 = module/* B1 */{
    │                          ^
  
  i ...Which is required to end this statement
  
    ┌─ comments.js:8:1
    │
  8 │ const m2 = module/* B1 */{
    │ ^^^^^^^^^^^^^^^^^^^^^^^^^
  

```


